# TFM

./: .gitignore  TFM.tex  pyproject.toml
Memoria/: TFM.tex  esquema RL.html
tfm/data/results/dqn_without_news/2025-05-11_bo/: best_params.json
tfm/models/: enums.py  nyt_schema.py
tfm/scripts/: 01-news_extraction.py  02-join_news_extraction.py  03-news_analysis.py  04-news_cleaning.py  05-natural_language_processing.py  05-natural_lenguage_processing.py  06-market_data.py  07-state_builder.py  08-dqn_with_news.py  08-dqn_with_news_evaluate.py  08-run_models.py  08-train_with_news.py  09-evaluate-models.py  09-ppo_with_news.py  10-results_01.py  10-results_02.py  10-sac_with_news.py  10_results_03.py  10_results_04.py  10_results_05.py  11-dqn_without_news.py  run_all.py  run_all_2.py
tfm/src/NLP/: nlp_processor.py  text_processor.py
tfm/src/RL/: state_assembler.py  stock_env.py
tfm/src/RL/agents/: base_agent.py  dqn_agent.py  ppo_agent.py  sac_agent.py
tfm/src/config/: settings.py
tfm/src/market/: market_data_extractor.py  split_data.py
tfm/src/news/: generate_new_market_date.py  news_extraction.py  nlp_processor.py
tfm/src/nlp/: news_processor.py  nlp_processor.py
tfm/src/rl/: state_assembler.py  stock_env.py
tfm/src/rl/agents/: base_agent.py  dqn_agent.py  ppo_agent.py  sac_agent.py
tfm/src/utils/: generate_new_market_date.py  market_data_extractor.py
tfm/src/viz/: plot_theme.py
